add map and mle, reformat isrl

--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The idea is to assign each observation to the most likely class, given its predictor values/features\n",
     "\n",
-    "Or: for feature x0, we should pick a class J so that probability Pr(Y=j|x=x0) is maximum (<b>also known as Bayes classifier</b>)\n",
+    "Or: for feature x0, we should pick a class J so that probability Pr(Y=j|x=x0) is maximum\n",
     "\n",
     "However, for real data, we don't know the condition distribution of true label Y given feature X), so we have to estimate it.\n",
     "\n",
@@ -107,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
