--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "slides: https://docs.google.com/presentation/d/1ijfNKLaUoe7FxThnQnhe588Mg5N61RkjvkrK4fN2MhQ/edit#slide=id.p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- The idea is to **come up with PC (principal component) direction** that **maximize variance** (or **minimize sum of squared distances between the original point and PC direction**, aka information loss) from old data point (higher dimension) to its new transformed value (lower dimension)\n",
     "\n",
     "- **What does it mean by “maximize variance”?** \n",
