--- a/ISLR/linear-regression-exercise.ipynb
+++ b/ISLR/linear-regression-exercise.ipynb
@@ -236,6 +236,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 2.],\n",
+       "       [0., 1., 2.],\n",
+       "       [0., 1., 2.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_x = np.linspace(0, 2, 3)\n",
+    "_y = np.linspace(1, 3, 3)\n",
+    "xv, yv = np.meshgrid(_x, _y)\n",
+    "xv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [2., 2., 2.],\n",
+       "       [3., 3., 3.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -1366,7 +1413,7 @@
    "cell_type": "code",
    "execution_count": 301,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1591,7 +1638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Important note: even though x1 and x2 are highly colinear, remove one does not help."
+    "**Important note: even though x1 and x2 are highly colinear, remove one does not help. See below**"
    ]
   },
   {
@@ -1869,6 +1916,20 @@
     "The np.random.rand at the end of y is possibly the reason why it's so hard to predict this using linear regression\n",
     "\n",
     "On the other hand, the np.random in x2 will have coefficient of 0.03 in the end, make it small enough to be ignore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously...\n",
+    "```python\n",
+    "np.random.seed(1)\n",
+    "x1 = np.random.rand(100)\n",
+    "x2 = .5 * x1 + np.random.rand(100) / 10\n",
+    "y = 2 + 2 * x1 + .3 * x2 + np.random.randn(100)\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -2156,7 +2217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
